git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80219 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/NEWS
+++ b/NEWS
@@ -14,7 +14,9 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 
 . Added support for Intel C++ 10.1
 
-. Fixed runtime problems with VxWorks 6.x in kernel mode
+. Fixed runtime problems with VxWorks 6.x in kernel mode, several improvements
+  have been made to ACE, but also some problems in the VxWorks kernel have
+  been found for which WindRiver has made patches.
 
 . Added support for VxWorks 6.5 kernel mode
 
@@ -25,6 +27,10 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 . Added support for RedHat 5.1
 
 . Added support for Microsoft Visual Studio 2008
+
+. Added support for Fedora Core 8
+
+. Added support for Ubuntu 7.10
 
 . With Ubuntu 7.04 and 7.10 we can't use visibility, that results in
   unresolved externals when building some tests. With lsb_release we
@@ -39,6 +45,21 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
   write a placeholder value and return the placeholder's pointer. The pointer
   can later be used in a call to replace() to replace the placeholder with a
   different value.
+
+. Initial support for VxWorks 6.6
+
+. Removed support for pthread draft 4, 6, & 7. This makes the ACE threading
+  code much cleaner
+
+. Improved autoconf support
+
+. Fixed TSS emulation problems
+
+. Changed ACE_thread_t and ACE_hthread_t to int for VxWorks kernel mode. All
+  thread creation methods do have an additional const char* argument to
+  specify the task name, this now also works with pthread support enabled
+
+. Use bool in much more interfaces where this is possible
 
 USER VISIBLE CHANGES BETWEEN ACE-5.6 and ACE-5.6.1
 ====================================================
