git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80225 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/NEWS
+++ b/NEWS
@@ -61,6 +61,8 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 
 . Use bool in much more interfaces where this is possible
 
+. Added support for Debian Etch
+
 USER VISIBLE CHANGES BETWEEN ACE-5.6 and ACE-5.6.1
 ====================================================
 
