--- a/THANKS
+++ b/THANKS
@@ -2226,10 +2226,11 @@ Nathan Glasser <nglasser at cantata dot com>
 Grégor Boirie <gregor dot boirie at free dot fr>
 Alex Solan <alex dot solan at gmail dot com>
 Venkat Sidhabathuni <venkats at idengines dot com>
-Nathan Ernst <Nathan dot Ernst at citadelgroup dot com> 
+Nathan Ernst <Nathan dot Ernst at citadelgroup dot com>
 Kun Niu <haoniukun at gmail dot com>
 Karl-Heinz Wind <wind at itq dot de>
 Oliver Spang <oliver dot spang at nsn dot com>
+Hu Yi <huyi dot zg at gmail dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
