--- a/THANKS
+++ b/THANKS
@@ -2231,6 +2231,7 @@ Kun Niu <haoniukun at gmail dot com>
 Karl-Heinz Wind <wind at itq dot de>
 Oliver Spang <oliver dot spang at nsn dot com>
 Hu Yi <huyi dot zg at gmail dot com>
+Joe Seward <joseph dot f dot seward at saic dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
