git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80318 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 Thu Dec 20 13:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
+        * ace/OS_NS_Thread.h:
+          Layout change
+
+        * ace/OS_NS_Thread.inl:
+          Fixed warning with VxWorks 6.6 which uses GCC 4.1.2
+
+Thu Dec 20 13:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
         * ace/OS_NS_dlfcn.inl:
           Fixed warning with VxWorks 6.6 which uses GCC 4.1.2
 
