--- a/THANKS
+++ b/THANKS
@@ -2232,6 +2232,7 @@ Karl-Heinz Wind <wind at itq dot de>
 Oliver Spang <oliver dot spang at nsn dot com>
 Hu Yi <huyi dot zg at gmail dot com>
 Joe Seward <joseph dot f dot seward at saic dot com>
+Tom Callaway <tcallawa at redhat dot com>
 Alick Nie <alick_nie at 163 dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
