Added notes regarding two recent commits.
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80348 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.2 and ACE-5.6.3
 
 . Deprecated Visual Age 5 and older
 
+. Fixed bug 3185.
+
+. Tweaks to support MacOS X 10.5 on Intel.
+
 USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 ====================================================
 
