git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80543 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.2 and ACE-5.6.3
 
 . Make ace_main extern C with VxWorks so that it doesn't get mangled
 
+. Fixed compile errors and warnings for VxWorks 6.6
+
 USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 ====================================================
 
