--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,9 @@ USER VISIBLE CHANGES BETWEEN ACE-5.6.2 and ACE-5.6.3
 . Added an MPC generator for the WindRiver Workbench 2.6 which is shipped
   with VxWorks 6.4
 
+. Added support for CodeGear C++ Builder 2007 with December 2007 update
+  installed
+
 USER VISIBLE CHANGES BETWEEN ACE-5.6.1 and ACE-5.6.2
 ====================================================
 
