undoing accidental deletion
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80826 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,33 @@
+Tue Mar  4 09:27:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/ProcessVX.pm:
+          Added a retry to the iPass protocol code, in a full test run
+          we sometimes see that the reboot has failed. With this retry
+          we hopefully get rid of those false test failures
+
+Tue Mar  4 05:54:22 UTC 2008  William Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/svn_props.py:
+          Automatically set default properties when svn complains.
+
+Mon Mar  3 11:22:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/MakeProjectCreator/templates/bor.mpd:
+          Just single line comments
+
+        * bin/MakeProjectCreator/templates/gnu.mpd:
+          Check VXWORKSLINK for 1
+
+Mon Mar  3 11:10:18 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * include/makeinclude/platform_vxworks5.5.x.GNU:
+        * include/makeinclude/platform_vxworks6.2.GNU:
+        * include/makeinclude/platform_vxworks6.3.GNU:
+        * include/makeinclude/rules.bin.GNU:
+        * include/makeinclude/rules.lib.GNU:
+          Use 1 for VXWORKSLINK instead of true. Added footprint=1
+          as flag to specify that you are doing a footprint build
+
 Mon Mar  3 10:49:28 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
 
         * apps/JAWS/clients/WebSTONE/src/cgi-send.c:
